tried to get routing to work, failed miserably

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
-    <title>MEAN stack assessment</title>
+    <title></title>
     <script src="vendors/angular.min.js" charset="utf-8"></script>
     <script src="scripts/script.js" charset="utf-8"></script>
   </head>
@@ -24,10 +24,9 @@
         <option value="Animal Affinity">Animal Affinity</option>
       </select>
       <div>
-        <button type="button" ng-click="addHero()" name="button">Submit</button>
-        <a href="/display">
+        <!-- <input type="submit" ng-clijlkck="addHero()" name="button"fjdkaljfldkjafldja> -->
+        <a href="/display" ng-click="addHero()">Submit</a>
       </div>
-      <!-- <button type="button" ng-click="showHeroes()" name="button">Show heroes</button> -->
     </div>
     </form>
   </body>
